force-app/main/default/objects/HI_Quote__c/fields/Census_State__c.field-meta.xml
<CustomField>
    <fullName>Census_State__c</fullName>
    <description>Full State name derived from the zip code on the Census.</description>
    <label>Census State</label>
    <length>30</length>
    <type>Text</type>
</CustomField>