force-app/main/default/objects/HI_Quote__c/fields/HI_Quote_Link__c.field-meta.xml
<CustomField>
    <fullName>HI_Quote_Link__c</fullName>
    <description>Url link to the most recent HI Quoting Tool.</description>
    <label>HI Quote Link</label>
    <type>Url</type>
</CustomField>