force-app/main/default/objects/HI_Quote__c/fields/Salesforce_ID__c.field-meta.xml
<CustomField>
    <fullName>Salesforce_ID__c</fullName>
    <description>Indicates the Salesforce ID the HI Quote information is related.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Salesforce ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>